# p3nfs-svn

./: trunk
tags/5.19/: Makefile  configure  configure.in
tags/5.19/client/epoc16/nfsc/: CHANGES  README
tags/5.19/client/epoc16/opl/: nfsc3.opl  nfsc3a.opl
tags/5.19/client/epoc32/nfsapp/: Makefile.epocR5  Makefile.in  Makefile.series60.v1  Makefile.series60.v1.noirda  Makefile.series80.v2  icon.series80.mbm  makefile.nfsclient  nfsapp.h  nfsclient.cpp  nfsclient.h  rfcomm.cpp  socket.cpp  util.cpp  version
tags/5.19/client/epoc32/nfsapp/ETC/: l2.ps  nfsclient.mmp
tags/5.19/client/epoc32/opl/: nfsc5.opl
tags/5.19/doc/: CHANGES  INSTALL.symbian  TODO  TRANSFER-TIMES  flowcontrol-test.txt  p3nfs.html  p3nfsd.1.in
tags/5.19/etc/: README  bluetooth.rc  kp3nfsd  mrouter-usb  mrouter.chat
tags/5.19/etc/frontend/: p3.tcl
tags/5.19/pkg/: filelist  p3nfs.spec
tags/5.19/server/: Makefile.in  OSdefs.h  config.h.in  defs.h.in  mp.h  mp_main.c  nfs_prot.h  nfs_prot_svc.c  nfs_prot_xdr.c  tcp.c  version.h
trunk/: .svnignore  Makefile.in
trunk/client/epoc16/opl/: boot.opl
trunk/client/epoc32/nfsapp/: Makefile.UIQ.v2  Makefile.common  Makefile.in  Makefile.series60.v2  Makefile.series80.v1  icon.epocR5.mbm  icon.series60.mbm  nfsapp.cpp  nfsapp.rss  nfsclient.ini  rfcomm.h  socket.h  tcpip.cpp  tcpip.h  util.h  version.in
trunk/client/epoc32/nfsapp/ETC/: bld.inf
trunk/debian/: README  changelog  control  copyright  dirs  p3nfs.dirs  p3nfs.lintian-override  p3nfsd.1  postinst  rules  watch
trunk/doc/: .svnignore  CHANGES  INSTALL.epoc16  bluetooth.linux  bluetooth.macosx  subversion.txt  usb.linux
trunk/etc/: mrouter-bluetooth
trunk/pkg/: PKGBUILD  buildpkg  buildrpm  p3nfs.spec.in
trunk/server/: .svnignore  defs.h  mp_inode.c  mp_mount.c  mp_pfs_ops.c  mp_serial.c  mp_xmit.c  pty.c
